tests/negative/neg_while_variant_not_derivable.safe
-- Test: neg_while_variant_not_derivable
-- Description: Convergence-style while loop without a derivable Loop_Variant.
--   The current emitted proof surface only accepts structural null traversal
--   and simple integer-bound while conditions for automatic Loop_Variant
--   emission. A floating-point convergence condition does not fit either form.
-- Expected: REJECT loop_variant_not_derivable

package while_variant_not_derivable

   type fraction is digits 6 range 0.0 to 1.0;

   function converge (start : fraction;
                      goal  : fraction) returns fraction
      value : fraction = start;

      while value < goal
         value = fraction ((long_float (value) + long_float (goal)) / 2.0);

      return value;



